# first_CMake_project

./: CMakeLists.txt  README.md  body_program.cpp
